[package]
name = "arena-match"
version = "0.1.0"
description = "Timebent - The Academy - an on-chain PVE and PVP arena with MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arena_match"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor", "access-control"] }
session-keys = { version = "3.0.10", features = ["no-entrypoint"] }
solana-sha256-hasher = "3.1.0"
solana-hash = "2.3.0"
